--- a/src/app/Paginas/LadoAdmin/Clientes/listado-clientes/listado-clientes.component.html
+++ b/src/app/Paginas/LadoAdmin/Clientes/listado-clientes/listado-clientes.component.html
@@ -22,7 +22,7 @@
                     <th mat-sort-header="direccion" scope="col">DIRECCIÓN</th>
                     <th mat-sort-header="provincia" scope="col">PROVINCIA</th>
                     <th mat-sort-header="localidad" scope="col">LOCALIDAD</th>
-                    <th scope="col"></th>
+                    <th scope="col">FUNCIONES</th>
                 </tr>
             </thead>
             <tbody>
