--- a/src/app/Paginas/LadoAdmin/MateriasPrimas/listado-materia-prima/listado-materia-prima.component.html
+++ b/src/app/Paginas/LadoAdmin/MateriasPrimas/listado-materia-prima/listado-materia-prima.component.html
@@ -19,7 +19,7 @@
                 <tr>
                     <th mat-sort-header="codigo" scope="col">CÓDIGO</th>
                     <th mat-sort-header="descripcion" scope="col">DESCRIPCIÓN</th>
-                    <th scope="col"></th>
+                    <th scope="col">FUNCIONES</th>
                 </tr>
             </thead>
             <tbody>
