--- a/src/app/Paginas/LadoCliente/card/card.component.html
+++ b/src/app/Paginas/LadoCliente/card/card.component.html
@@ -1,9 +1,10 @@
-<div class="card" style="margin: 5px;">
+<div class="card p-1 rounded" style="margin: 5px;">
     <img src={{imagen}} class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title">{{nombre}}</h5>
         <p class="card-text">{{descripcion}}</p>
         <p><small class="card-text">{{codigo}}</small></p>
-        <!-- <a href="#" class="btn btnAzul">Ver detalle</a> -->
+        <a href="https://wa.me/3572439438/?text=Hola,%20quer%C3%ADa%20consultarte%20acerca%20del%20producto%20{{nombre}}"
+            class="btn btnAzul" matTooltip="Solicitar producto">Solicitar producto</a>
     </div>
 </div>
