--- a/src/app/Paginas/LadoCliente/contacto/contacto.component.html
+++ b/src/app/Paginas/LadoCliente/contacto/contacto.component.html
@@ -28,7 +28,10 @@
                 <p>Teléfono:</p>
             </div>
             <div class="col-6 text-start">
-                <p>+54 3572-435838</p>
+                <p>+54 3572-435838 <a matTooltip="Consultar por WhatsApp"
+                        href="https://wa.me/3572439438/?text=Hola,%20quer%C3%ADa%20consultarte%20acerca%20de%20las%20bochas!">
+                        <i type="button" class="fa-brands fa-whatsapp iconoW"></i>
+                    </a></p>
             </div>
         </div>
         <div class="row">
@@ -36,7 +39,12 @@
                 Correo electrónico:
             </div>
             <div class="col-6 text-start">
-                <p>bochasfranca@yahoo.com.ar</p>
+                <p>bochasfranca@yahoo.com.ar
+                    <a matTooltip="Consultar por correo electrónico"
+                        href="mailto:bochasfranca@yahoo.com.ar?subject=Consulta%20sobre%20las%20bochas&body=Hola,%20quería%20consultarte%20acerca%20de%20las%20bochas!">
+                        <i type="button" class="fa-brands fa-yahoo iconoY"></i>
+                    </a>
+                </p>
             </div>
         </div>
     </div>
