--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,9 @@
 .BackgroundAzul {
     background-color: #162B4E;
 }
+.BackgroundAzulCard {
+    background-color: #1b345d;
+}
 
 .TextWhite {
     color: #fff
