--- a/src/app/Paginas/LadoAdmin/CatalogoAdm/listado-catalogo/listado-catalogo.component.html
+++ b/src/app/Paginas/LadoAdmin/CatalogoAdm/listado-catalogo/listado-catalogo.component.html
@@ -20,7 +20,7 @@
           <th mat-sort-header="nombre" scope="col">NOMBRE</th>
           <th mat-sort-header="colorProducto" scope="col">DESCRIPCION</th>
           <th mat-sort-header="disenioProducto" scope="col">IMAGEN</th>
-          <th scope="col"></th>
+          <th scope="col">FUNCIONES</th>
         </tr>
       </thead>
       <tbody>
@@ -32,6 +32,8 @@
           <td>
             <i type="button" class="fa-solid fa-pencil me-3 iconoLista" (click)="Modificar(catalogo.idCatalogo)"
               matTooltip="Modificar catálogo"></i>
+              <i type="button" class="fa-solid fa-trash me-3 iconoListaD" (click)="EliminarCatalogo(catalogo.idCatalogo)"
+              matTooltip="Eliminar catálogo"></i>
           </td>
         </tr>
       </tbody>
