--- a/src/app/Paginas/LadoCliente/catalogo/catalogo.component.html
+++ b/src/app/Paginas/LadoCliente/catalogo/catalogo.component.html
@@ -1,6 +1,15 @@
-<div class="container py-2">
+<div class="container mt-4 mb-5 rounded-2 BackgroundAzulCard shadow-lg">
+    <div class="row py-2 mtc-5 mb-2" style="text-align: center">
+        <label class="mb-2 TextWhite" for="">BUSCAR PRODUCTO</label>
+        <div class="col-12">
+            <input type="text" class="form-control inputColor" [(ngModel)]="filtro" (keyup)="filtrarTabla()"
+                matTooltip="Filtrar" />
+        </div>
+    </div>
+    <hr class="TextWhite">
     <div class="row">
-        <app-card class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4" *ngFor="let item of lista" [codigo]="item.codigo"
-            [imagen]="item.imagen"  [descripcion]="item.descripcion"  [nombre]="item.nombre"></app-card>
+        <app-card class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 mb-4 pt-2" *ngFor="let item of lista"
+            [codigo]="item.codigo" [imagen]="item.imagen" [descripcion]="item.descripcion" [nombre]="item.nombre">
+        </app-card>
     </div>
 </div>
