--- a/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
@@ -25,11 +25,11 @@
                         [ngClass]="{ 'selected-item': selectedItem === 'contacto' }"
                         (click)="isNavbarCollapsed = true; selectedItem = 'contacto'">CONTACTO</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link active letra" href="#" routerLink="/cliente/ubicacion"
                         [ngClass]="{ 'selected-item': selectedItem === 'ubicacion' }"
                         (click)="isNavbarCollapsed = true ; selectedItem = 'ubicacion'">UBICACIÓN</a>
-                </li>
+                </li> -->
 
                 <!-- Administrador -->
 
