--- a/src/app/Paginas/LadoCliente/contacto/contacto.component.html
+++ b/src/app/Paginas/LadoCliente/contacto/contacto.component.html
@@ -48,4 +48,24 @@
             </div>
         </div>
     </div>
+    <hr class="TextWhite">
+    <div>
+       <div class="row">
+        <div class="col-12 text-center">
+            <h3 class="TextWhite">UBICACIÓN</h3>
+        </div>
+       </div> 
+    </div>
+    <div class="container-fluid p-3">
+        <div class="row">
+            <div class="col-12">
+                <div class="map-container shadow-lg">
+                    <div class="map-frame">
+                        <div id="map"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
