--- a/src/app/Paginas/LadoCliente/ubicacion/ubicacion.component.html
+++ b/src/app/Paginas/LadoCliente/ubicacion/ubicacion.component.html
@@ -1,1 +1,11 @@
-<p>ubicacion works!</p>
+<div class="container-fluid p-3">
+    <div class="row">
+        <div class="col-6">
+            <div class="map-container">
+                <div class="map-frame">
+                    <div id="map"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
