--- a/src/app/Paginas/LadoCliente/contacto/contacto.component.html
+++ b/src/app/Paginas/LadoCliente/contacto/contacto.component.html
@@ -2,44 +2,44 @@
     <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1680536147/FrancaSW/My_project-1_1_browzy.png"
         class="d-block w-100" alt="...">
 </div>
+
 <div class="container py-3 mt-1">
-    <p class="TextWhite text-center">Bochas Franca, comienza en el negocio de la fabricación de bochas en abril de 2001,
-        por gente
-        con experiencia de
-        muchos años en la materia.
-    </p>
-    <p class="TextWhite text-center"> Se adquiere toda la maquinaria nueva, al igual que las matrices para su
-        fabricación. Desde
-        entonces se ha tenido
-        en cuenta el más mínimo detalle en los procesos de fabricación lo cual garantiza prácticamente un 0 % de fallas
-        de fabricación, de cada 10 mil bochas fabricadas solo 1 devuelta.</p>
-    <p class="TextWhite text-center">Por el motivo antes mencionado nuestro producto tiene una garantía de 12 meses
-        contra fallas de
-        fabricación.
-    </p>
-    <p class="TextWhite text-center">Nuestro objetivo como empresa es mantener la seriedad y la calidad de nuestros
-        productos en el
-        tiempo, lo cual
-        garantiza la mejor publicidad.</p>
+    <hr class="TextWhite">
+    <div class="row py-2">
+        <div class="col-12">
+            <h3 class="TextWhite text-center">NUESTRA EMPRESA</h3>
+        </div>
+    </div>
+    <p class="TextWhite text-center">Bochas Franca SRL se inició en el negocio de la fabricación de bochas en abril de
+        2001, fundada por un
+        equipo
+        de expertos con años de experiencia en la materia. Para comenzar, se adquirió toda la maquinaria nueva y
+        las matrices necesarias para su fabricación. Desde entonces, se ha prestado una atención minuciosa a
+        cada detalle del proceso de producción, lo que ha garantizado un índice de fallas de fabricación
+        prácticamente nulo. De hecho, de cada 10 mil bochas fabricadas, solo 1 es devuelta.</p>
+
+    <p class="TextWhite text-center"> Como resultado de este alto estándar de calidad, nuestro producto viene con una
+        garantía de 12 meses
+        contra fallas de fabricación. Nos esforzamos por mantener esta seriedad y calidad a largo plazo, lo que
+        se traduce en una excelente reputación y publicidad para nuestra empresa.</p>
     <hr class="TextWhite">
     <div class="TextWhite">
         <div class="row">
-            <div class="col-6 text-end">
-                <p>Teléfono:</p>
+            <div class="col-12 text-center">
+                <h3 class="TextWhite">CONTACTO</h3>
             </div>
-            <div class="col-6 text-start">
-                <p>+54 3572-435838 <a matTooltip="Consultar por WhatsApp"
+        </div>
+        <div class="row mt-2">
+            <div class="col-12 text-center">
+                <p>Teléfono: +54 3572-435838 <a matTooltip="Consultar por WhatsApp"
                         href="https://wa.me/3572439438/?text=Hola,%20quer%C3%ADa%20consultarte%20acerca%20de%20las%20bochas!">
                         <i type="button" class="fa-brands fa-whatsapp iconoW"></i>
                     </a></p>
             </div>
         </div>
         <div class="row">
-            <div class="col-6 text-end">
-                Correo electrónico:
-            </div>
-            <div class="col-6 text-start">
-                <p>bochasfranca@yahoo.com.ar
+            <div class="col-12 text-center">
+                <p>Correo electrónico: bochasfranca@yahoo.com.ar
                     <a matTooltip="Consultar por correo electrónico"
                         href="mailto:bochasfranca@yahoo.com.ar?subject=Consulta%20sobre%20las%20bochas&body=Hola,%20quería%20consultarte%20acerca%20de%20las%20bochas!">
                         <i type="button" class="fa-brands fa-yahoo iconoY"></i>
@@ -50,11 +50,11 @@
     </div>
     <hr class="TextWhite">
     <div>
-       <div class="row">
-        <div class="col-12 text-center">
-            <h3 class="TextWhite">UBICACIÓN</h3>
+        <div class="row">
+            <div class="col-12 text-center">
+                <h3 class="TextWhite">UBICACIÓN</h3>
+            </div>
         </div>
-       </div> 
     </div>
     <div class="container-fluid p-3">
         <div class="row">
@@ -68,4 +68,3 @@
         </div>
     </div>
 </div>
-
