--- a/src/app/Paginas/LadoCliente/contacto/contacto.component.html
+++ b/src/app/Paginas/LadoCliente/contacto/contacto.component.html
@@ -2,12 +2,16 @@
     <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1680536147/FrancaSW/My_project-1_1_browzy.png"
         class="d-block w-100" alt="...">
 </div>
-
-<div class="container py-3 mt-1">
-    <hr class="TextWhite">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 280">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,224L80,224C160,224,320,224,480,192C640,160,800,96,960,106.7C1120,117,1280,203,1360,245.3L1440,288L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
+    </path>
+</svg>
+<!-- NUESTRA EMPRESA -->
+<div class="container ">
     <div class="row py-2">
         <div class="col-12">
-            <h3 class="TextWhite text-center">NUESTRA EMPRESA</h3>
+            <h1 class="TextWhite text-center">NUESTRA EMPRESA</h1>
         </div>
     </div>
     <p class="TextWhite text-center">Bochas Franca SRL se inició en el negocio de la fabricación de bochas en abril de
@@ -22,11 +26,23 @@
         garantía de 12 meses
         contra fallas de fabricación. Nos esforzamos por mantener esta seriedad y calidad a largo plazo, lo que
         se traduce en una excelente reputación y publicidad para nuestra empresa.</p>
-    <hr class="TextWhite">
+</div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 280">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,224C840,245,960,235,1080,202.7C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+    </path>
+</svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 280">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,192L60,176C120,160,240,128,360,117.3C480,107,600,117,720,138.7C840,160,960,192,1080,218.7C1200,245,1320,267,1380,277.3L1440,288L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+    </path>
+</svg>
+<!-- CONTACTO -->
+<div class="container">
     <div class="TextWhite">
         <div class="row">
             <div class="col-12 text-center">
-                <h3 class="TextWhite">CONTACTO</h3>
+                <h1 class="TextWhite">CONTACTO</h1>
             </div>
         </div>
         <div class="row mt-2">
@@ -48,12 +64,22 @@
             </div>
         </div>
     </div>
-    <hr class="TextWhite">
-    <div>
-        <div class="row">
-            <div class="col-12 text-center">
-                <h3 class="TextWhite">UBICACIÓN</h3>
-            </div>
+</div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 280">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,224C840,245,960,235,1080,202.7C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+    </path>
+</svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 280">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,192L60,176C120,160,240,128,360,117.3C480,107,600,117,720,138.7C840,160,960,192,1080,218.7C1200,245,1320,267,1380,277.3L1440,288L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+    </path>
+</svg>
+<!-- UBICACIÓN -->
+<div class="container">
+    <div class="row">
+        <div class="col-12 text-center">
+            <h1 class="TextWhite">UBICACIÓN</h1>
         </div>
     </div>
     <div class="container-fluid p-3">
@@ -68,3 +94,8 @@
         </div>
     </div>
 </div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,96L120,122.7C240,149,480,203,720,218.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
+    </path>
+</svg>
