--- a/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
+++ b/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.html
@@ -1,14 +1,14 @@
 <div id="carouselExampleInterval" class="carousel slide shadow-lg" data-bs-ride="carousel">
     <div class="carousel-inner">
-        <div class="carousel-item active" data-bs-interval="6000">
+        <div class="carousel-item active" data-bs-interval="4000">
             <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1680536225/FrancaSW/My_project-1_2_levzks.png"
                 class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item active" data-bs-interval="6000">
+        <div class="carousel-item active" data-bs-interval="4000">
             <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1680536147/FrancaSW/My_project-1_1_browzy.png"
                 class="d-block w-100" alt="...">
         </div>
-        <div class="carousel-item active" data-bs-interval="6000">
+        <div class="carousel-item active" data-bs-interval="4000">
             <img src="https://res.cloudinary.com/dawraxuq1/image/upload/v1680535973/FrancaSW/My_project-1_eji7sr.png"
                 class="d-block w-100" alt="...">
         </div>
@@ -22,6 +22,13 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,224L80,224C160,224,320,224,480,192C640,160,800,96,960,106.7C1120,117,1280,203,1360,245.3L1440,288L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z">
+    </path>
+</svg>
+
 <div class="container py-3">
     <div class="row">
         <app-card-inicio class="col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 mb-4 pt-2" *ngFor="let item of lista"
@@ -29,6 +36,18 @@
         </app-card-inicio>
     </div>
 </div>
+
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,160L60,149.3C120,139,240,117,360,133.3C480,149,600,203,720,224C840,245,960,235,1080,202.7C1200,171,1320,117,1380,90.7L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z">
+    </path>
+</svg>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,192L60,176C120,160,240,128,360,117.3C480,107,600,117,720,138.7C840,160,960,192,1080,218.7C1200,245,1320,267,1380,277.3L1440,288L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+    </path>
+</svg>
+
 <div class="container py-5 TextWhite">
     <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -54,6 +73,7 @@
         </div>
     </div>
 </div>
+
 <div class="container py-3 TextWhite">
     <div class="row">
         <div class="d-none d-lg-block  col-md-12 col-lg-6 col-xl-6">
@@ -76,12 +96,23 @@
     </div>
 </div>
 
-<div>
-    <footer >
-        <hr class="BackgroundAzul shadow">
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae dolorum, vitae expedita modi temporibus
-            ab, unde quae dolore suscipit incidunt eaque perspiciatis ducimus officiis sed, iusto saepe? Cum, adipisci
-            dolore.</h1>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+    <path fill="#1b345d" fill-opacity="1"
+        d="M0,96L120,122.7C240,149,480,203,720,218.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z">
+    </path>
+</svg>
 
+<div class="container-fluid BackgroundAzulCard">
+    <footer class="">
+        <div class="row">
+            <small class="text-center TextWhite"><a class="TextWhite me-3" routerLink="/cliente/terminos">Términos y
+                    Condiciones</a>
+                <small>|</small> <a class="TextWhite ms-3" routerLink="/cliente/ayuda">Ayuda</a></small>
+        </div>
+        <div class="row">
+            <small class="text-center TextWhite lighter  mt-2 mb-2">Copyright © 2023 Bochas Franca SRL. Todos los
+                derechos
+                reservados.</small>
+        </div>
     </footer>
 </div>
