cosas del stock y cambio de estetica de listados

--- a/src/app/Paginas/LadoAdmin/Clientes/crear-cliente/crear-cliente.component.html
+++ b/src/app/Paginas/LadoAdmin/Clientes/crear-cliente/crear-cliente.component.html
@@ -1,6 +1,6 @@
 <div class="container TextWhite mtt ff shadow-lg rounded-2">
     <form #f="ngForm" (ngSubmit)="registrarCliente(f)" class="container">
-        <h1 class="text-center py-3">REGISTRAR CLIENTE</h1>
+        <h3 class="text-start py-3">NUEVO CLIENTE</h3>
         <hr />
         <div class="row">
 
