--- a/src/app/Paginas/LadoAdmin/Clientes/modificar-cliente/modificar-cliente.component.html
+++ b/src/app/Paginas/LadoAdmin/Clientes/modificar-cliente/modificar-cliente.component.html
@@ -1,6 +1,6 @@
 <div class="container TextWhite mtt ff shadow-lg rounded-2">
     <form #f="ngForm" (ngSubmit)="actualizarCliente(f)" class="container">
-        <h1 class="text-center py-3">MODIFICAR CLIENTE</h1>
+        <h3 class="text-start py-3">MODIFICAR CLIENTE</h3>
         <hr />
         <div class="row">
 
