--- a/src/app/Paginas/LadoAdmin/Productos/modificar-producto/modificar-producto.component.html
+++ b/src/app/Paginas/LadoAdmin/Productos/modificar-producto/modificar-producto.component.html
@@ -1,6 +1,6 @@
 <div class="container TextWhite mtt ff shadow-lg rounded-2">
     <form #f="ngForm" (ngSubmit)="actualizarProducto(f)" class="container">
-        <h1 class="text-center py-3">MODIFICAR PRODUCTO</h1>
+        <h3 class="text-start py-3">MODIFICAR PRODUCTO</h3>
         <hr />
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
