--- a/src/app/Paginas/LadoAdmin/Proveedores/crear-proveedor/crear-proveedor.component.html
+++ b/src/app/Paginas/LadoAdmin/Proveedores/crear-proveedor/crear-proveedor.component.html
@@ -1,6 +1,6 @@
 <div class="container TextWhite mtt ff shadow-lg rounded-2">
     <form #f="ngForm" (ngSubmit)="registrarProveedor(f)" class="container">
-        <h1 class="text-center py-3">REGISTRAR PROVEEDOR</h1>
+        <h3 class="text-start py-3">NUEVO PROVEEDOR</h3>
         <hr />
         <div class="row">
 
