--- a/src/app/Paginas/LadoAdmin/Proveedores/modificar-proveedor/modificar-proveedor.component.html
+++ b/src/app/Paginas/LadoAdmin/Proveedores/modificar-proveedor/modificar-proveedor.component.html
@@ -1,6 +1,6 @@
 <div class="container TextWhite mtt ff shadow-lg rounded-2">
     <form #f="ngForm" (ngSubmit)="actualizarProveedor(f)" class="container">
-        <h1 class="text-center py-3">MODIFICAR PROVEEDOR</h1>
+        <h3 class="text-start py-3">MODIFICAR PROVEEDOR</h3>
         <hr />
         <div class="row">
 
