--- a/src/app/General/Barra/barra-navegacion/barra-navegacion.component.css
+++ b/src/app/General/Barra/barra-navegacion/barra-navegacion.component.css
@@ -28,3 +28,23 @@
 .selected-item {
     color: #5192FF !important;
 }
+
+.fondoDw {
+    background-color: #162B4E;
+}
+
+.fondoDw:hover {
+    background-color: #162B4E;
+}
+
+.imagen {
+    width: 75px;
+    height: 50px;
+    background-image: url("https://res.cloudinary.com/dawraxuq1/image/upload/v1683497196/FrancaSW/75px_50px_xtfwy5.png");
+}
+
+.imagen:hover {
+    width: 75px;
+    height: 50px;
+    background-image: url("https://res.cloudinary.com/dawraxuq1/image/upload/v1683499947/FrancaSW/75px_50px_color_2_ztsk9m.png");
+}
