--- a/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
+++ b/src/app/General/Barra/barra-navegacion/barra-navegacion.component.html
@@ -1,12 +1,14 @@
 <nav class="navbar navbar-expand-lg shadow BackgroundAzu" data-bs-theme="dark">
     <div class="container-fluid py-2">
-        <a class="navbar-brand TextWhite letra1" href="#">Franca</a>
+        <a class="navbar-brand TextWhite letra1 imagen" href="#"
+            [ngClass]="{ 'selected-item': selectedItem === 'home' }"
+            (click)="isNavbarCollapsed = true; selectedItem = 'home'"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
             aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"
             (click)="isNavbarCollapsed = !isNavbarCollapsed">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse fLight" [ngClass]="{ 'show': !isNavbarCollapsed }" id="navbarText">
+        <div class="collapse navbar-collapse fLight " [ngClass]="{ 'show': !isNavbarCollapsed }" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
                 <!--Vista general-->
@@ -44,10 +46,10 @@
                         aria-expanded="false" [ngClass]="{ 'selected-item': selectedItem === 'stock' }">
                         STOCK
                     </a>
-                    <ul class="dropdown-menu BackgroundAzul">
-                        <li><a class="dropdown-item letra" href="#" routerLink="/admin/listadoStockProducto"
+                    <ul class="dropdown-menu BackgroundAzul fondoDw">
+                        <li><a class="dropdown-item letra fondoDw" href="#" routerLink="/admin/listadoStockProducto"
                                 (click)="isNavbarCollapsed = true ; selectedItem = 'stock'">PRODUCTOS</a></li>
-                        <li><a class="dropdown-item letra" href="#" routerLink="/admin/listadoStockMateriaPrima"
+                        <li><a class="dropdown-item letra fondoDw" href="#" routerLink="/admin/listadoStockMateriaPrima"
                                 (click)="isNavbarCollapsed = true; selectedItem = 'stock'">MATERIAS
                                 PRIMAS</a>
                         </li>
