--- a/src/app/Paginas/LadoAdmin/MateriasPrimas/listado-materia-prima/listado-materia-prima.component.html
+++ b/src/app/Paginas/LadoAdmin/MateriasPrimas/listado-materia-prima/listado-materia-prima.component.html
@@ -1,5 +1,5 @@
 <div class="container TextWhite rounded-2 ff mtt">
-    <h1 class="text-center py-2">MATERIAS PRIMAS</h1>
+    <!-- <h1 class="text-center py-2">MATERIAS PRIMAS</h1>
     <hr>
     <label class="mb-2" for="">BUSCAR</label>
     <div class="row py-2 mtc-5 mb-2" style="text-align: center;">
@@ -11,7 +11,27 @@
             <button class="btn btnCeleste" (click)="agregar()" matTooltip="Nueva materia prima">NUEVO</button>
         </div>
     </div>
+    <hr /> -->
+    <div class="row">
+        <div class="col-6 col-sm-6 col-md-5 col-lg-4">
+            <h3 class="text-start py-3 mt-1">MATERIAS PRIMAS</h3>
+        </div>
+
+        <div class="col-6 col-sm-6 col-md-7 col-lg-8 text-start py-3">
+            <button class="btn btnCeleste" (click)="agregar()" matTooltip="Nueva materia prima">NUEVO</button>
+        </div>
+    </div>
     <hr />
+    <label class="mb-2" for="">BUSCAR</label>
+    <div class="row py-3 mtc-5 mb-4" style="text-align: center">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+            <input type="text" class="form-control inputColor" [(ngModel)]="filtro" (keyup)="filtrarTabla()"
+                matTooltip="Filtrar" />
+        </div>
+        <div class="col-md-6 col-lg-6">
+        </div>
+
+    </div>
 
     <div class="table-responsive">
         <table class="table  table-responsive mtc-5 TextWhite" matSort (matSortChange)="sortData($event)">
