--- a/src/app/Paginas/LadoAdmin/Proveedores/ProvMatPrima/modificar-precio/modificar-precio.component.html
+++ b/src/app/Paginas/LadoAdmin/Proveedores/ProvMatPrima/modificar-precio/modificar-precio.component.html
@@ -1,6 +1,6 @@
 <div class="container TextWhite mtt ff shadow-lg rounded-2">
     <form #f="ngForm" (ngSubmit)="cargarPrecio(f)" class="container">
-        <h1 class="text-center py-3">MODIFICAR PRECIO A LA MATERIA PRIMA</h1>
+        <h3 class="text-start py-3">MODIFICAR PRECIO A LA MATERIA PRIMA</h3>
         <hr />
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-3">
