--- a/src/app/Paginas/LadoCliente/catalogo/catalogo.component.html
+++ b/src/app/Paginas/LadoCliente/catalogo/catalogo.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4 mb-5 rounded-2 BackgroundAzulCard shadow-lg">
     <div class="row py-2 mtc-5 mb-2" style="text-align: center">
-        <label class="mb-2 TextWhite" for="">BUSCAR PRODUCTO</label>
+        <label class="mb-2 TextWhite text-start" for="">BUSCAR PRODUCTO</label>
         <div class="col-12">
             <input type="text" class="form-control inputColor" [(ngModel)]="filtro" (keyup)="filtrarTabla()"
                 matTooltip="Filtrar" />
