--- a/src/app/Paginas/LadoCliente/contacto/contacto.component.html
+++ b/src/app/Paginas/LadoCliente/contacto/contacto.component.html
@@ -14,7 +14,7 @@
             <h1 class="TextWhite text-center">NUESTRA EMPRESA</h1>
         </div>
     </div>
-    <p class="TextWhite text-center">Bochas Franca SRL se inició en el negocio de la fabricación de bochas en abril de
+    <p class="TextWhite text-justify">Bochas Franca SRL se inició en el negocio de la fabricación de bochas en abril de
         2001, fundada por un
         equipo
         de expertos con años de experiencia en la materia. Para comenzar, se adquirió toda la maquinaria nueva y
@@ -22,7 +22,7 @@
         cada detalle del proceso de producción, lo que ha garantizado un índice de fallas de fabricación
         prácticamente nulo. De hecho, de cada 10 mil bochas fabricadas, solo 1 es devuelta.</p>
 
-    <p class="TextWhite text-center"> Como resultado de este alto estándar de calidad, nuestro producto viene con una
+    <p class="TextWhite text-justify"> Como resultado de este alto estándar de calidad, nuestro producto viene con una
         garantía de 12 meses
         contra fallas de fabricación. Nos esforzamos por mantener esta seriedad y calidad a largo plazo, lo que
         se traduce en una excelente reputación y publicidad para nuestra empresa.</p>
