--- a/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.css
+++ b/src/app/Paginas/LadoCliente/inicio-cliente/inicio-cliente.component.css
@@ -1,25 +1,27 @@
  .card img {
-    max-width: 90%;
-    max-height: 90%;
-}*
+     max-width: 90%;
+     max-height: 90%;
+ }
 
-.card {
-    margin: 0 0.5em;
-    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-    border: none;
-    border-radius: 0;
-} 
+ * .card {
+     margin: 0 0.5em;
+     box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+     border: none;
+     border-radius: 0;
+ }
 
-.lighter{
-    font-weight: lighter;
-}
+ .lighter {
+     font-weight: lighter;
+ }
 
-.vertical-line {
-    border-left: 1px solid #ccc;
-    height: 100%;
-    width: 2px; /* Establece el ancho de la línea vertical */
-}
+ .vertical-line {
+     border-left: 1px solid #ccc;
+     height: 100%;
+     width: 2px;
+     /* Establece el ancho de la línea vertical */
+ }
 
-a {
-    text-decoration: none;
-}
+ a {
+     text-decoration: none;
+ }
+
