--- a/src/app/Seguridad/Login/login/login.component.html
+++ b/src/app/Seguridad/Login/login/login.component.html
@@ -6,16 +6,16 @@
                 <div class="col-12">
                     <form [formGroup]="loginForm" (ngSubmit)="login()">
                         <div class="align-content-center">
-                            <h1 class="mt-2 py-2 text-center TextWhite letraBold">Inicio de Sesión</h1>
+                            <h2 class="mt-2 py-2 text-center TextWhite letraBold">INICIO DE SESIÓN</h2>
                         </div>
                         <hr class="TextWhite" />
                         <div class="mb-4 form-group">
-                            <label class="form-label TextWhite">Correo Electrónico</label>
+                            <label class="form-label TextWhite">CORREO ELECTRÓNICO</label>
                             <input type="email" class="form-control bordeAzul" name="email" formControlName="email"
                                 [class.red-icon]="this.loginForm.get('email')?.invalid">
                         </div>
                         <div class="mb-4 form-group">
-                            <label class="form-label TextWhite">Contraseña</label><span class="eyeIcon flechaAzul"
+                            <label class="form-label TextWhite">CONTRASEÑA</label><span class="eyeIcon flechaAzul"
                                 style="padding-left: 5px;" (click)="viewpass()"><i
                                     [ngClass]="visible?'fa-solid fa-eye-slash':'fa-solid fa-eye'"
                                     matTooltip="Ver contraseña"></i></span>
@@ -25,7 +25,7 @@
                         </div>
                         <div class="d-grid py-2">
                             <button type="submit" class="btn btnAzul" [disabled]="loginForm.invalid"
-                                matTooltip="Iniciar sesión">Iniciar Sesión</button>
+                                matTooltip="Iniciar sesión">INICIAR SESIÓN</button>
                         </div>
                         <div class="d-flex py-3 mt-2 mb-2 justify-content-center">
                             <i class="fa-solid fa-arrow-left icono flechaAzul" routerLink="" type="button"
